# django-dynamic-filters

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  REDAME.rst  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
dynfilters/: admin.py  api.py  apps.py  clone.py  filters.py  forms.py  helpers.py  model_helpers.py  models.py  shunting_yard.py  url_helpers.py  urls.py  utils.py  views.py
dynfilters/migrations/: 0001_initial.py  0002_alter_dynamicfilterexpr_model.py  0003_alter_dynamicfilterexpr_name.py  0004_alter_dynamicfilterexpr_is_global_and_more.py  0005_alter_dynamicfilterexpr_is_global.py  0006_alter_dynamicfilterexpr_is_global.py
dynfilters/templates/dynfilters/: dynamic_filter.html
