[metadata]
name = django-dynfilters
version = 1.0
description = A Django application for dynamic admin filters.
keywords = django-admin admin dynamic filters custom query
long_description = file: README.rst
url = https://github.com/caramdache/django-dynamic-filters
author = Caram Dache
author_email = caramdache@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.0
    furl >= 2.1
    django-admin-sortable2 >= 2.0
